# auto-nmap

./: .gitignore  README.md  pyproject.toml
auto-nmap/: discoverDevices.py  discoverPorts.py
auto-nmap/txt-files/: ips.txt
auto_nmap/: Scan.py  discoverDevices.py  discoverDevices2.py  discoverPorts.py
auto_nmap/csv-files/: README.md
auto_nmap/txt-files/: README.md
tests/: test_auto_nmap.py
