[tool.poetry]
name = "auto-nmap"
version = "0.1.0"
description = ""
authors = ["Samuel Owen <SamHirael@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
python-nmap = "^0.7.1"
netifaces = "^0.11.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
discoverDevices = "auto-nmap.discoverDevices:main"